# python-project-templater

./: .gitignore  CHANGELOG.md  LICENCE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  release.yml
python_project_templater/: main.py
python_project_templater/templates/base/: pyproject.toml
python_project_templater/templates/fastapi/: alembic.ini  pyproject.toml
python_project_templater/templates/fastapi/backend/: __main__.py  app.py  settings.py
python_project_templater/templates/fastapi/backend/api/: __init__.py
python_project_templater/templates/fastapi/backend/database/: __init__.py
python_project_templater/templates/fastapi/fastapi/: __main__.py  app.py
python_project_templater/templates/fastapi/migrations/: env.py
tests/: test_main.py
