[tool.poetry]
name = "python-project-templater"
version = "0.1.0"
description = ""
authors = ["zeph1rr <grianton535@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_templater"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
