[tool.poetry]
name = "python-project-templater"
version = "0.1.0"
description = ""
authors = ["zeph1rr <grianton535@gmail.com>"]
readme = "README.md"
packages = [{include = "python_project_templater"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
argparse = "^1.4.0"
loguru = "^0.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
