[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Антон Григорьев <grianton535@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
alembic = "^1.9.3"
sqlalchemy = "^2.0.3"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
